Regression : 3D Cursor Geometry Surface Project stopped working in X-Ray mode #108665

Closed
opened 2023-06-06 15:37:11 +02:00 by ChameleonScales · 4 comments

System Information
Operating system: Linux-5.10.0-23-amd64-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce GTX 1660/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.182.03

Blender Version
Broken: version: 3.5.1, branch: blender-v3.5-release, commit date: 2023-04-24 18:11, hash: e1ccd9d4a1d3
Worked: version 3.4.1

Caused by 98bfa8d458

Short description of error
Projecting the 3D cursor on Geometry while in X-Ray mode used to work until Blender 3.4.1 and stopped working in 3.5.1.

Exact steps for others to reproduce the error
From a blank scene :

  1. Add a Sphere.
  2. Activate the 3D Cursor Tool.
  3. Enable Surface Project in its tool settings.
  4. Set the orientation to Geometry.
  5. Keep X-Ray mode off and click on the sphere : the cursor properly orients itself on its surface.
  6. Turn X-Ray on and click again : the cursor doesn't follow the surface anymore and orients itself as if the orientation mode was set to "View".
**System Information** Operating system: Linux-5.10.0-23-amd64-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce GTX 1660/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.182.03 **Blender Version** Broken: version: 3.5.1, branch: blender-v3.5-release, commit date: 2023-04-24 18:11, hash: `e1ccd9d4a1d3` Worked: version 3.4.1 Caused by 98bfa8d4589cae47d0b7ae9ff576a9acca91ab88 **Short description of error** Projecting the 3D cursor on Geometry while in X-Ray mode used to work until Blender 3.4.1 and stopped working in 3.5.1. **Exact steps for others to reproduce the error** From a blank scene : 1. Add a Sphere. 2. Activate the 3D Cursor Tool. 3. Enable Surface Project in its tool settings. 4. Set the orientation to Geometry. 5. Keep X-Ray mode off and click on the sphere : the cursor properly orients itself on its surface. 6. Turn X-Ray on and click again : the cursor doesn't follow the surface anymore and orients itself as if the orientation mode was set to "View".
ChameleonScales added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-06-06 15:37:12 +02:00
Iliya Katushenock added the
Interest
Modeling
label 2023-06-06 15:47:59 +02:00

I was able to reprodce this at one point but 99.9% it sticks to the surface, so not sure if that is same bug as this. This may be OS specific as well. @lichtwerk can you reproduce?

I was able to reprodce this at one point but 99.9% it sticks to the surface, so not sure if that is same bug as this. This may be OS specific as well. @lichtwerk can you reproduce?
Member

Can confirm on Windows.

Can confirm on Windows.
Member

Broke between 896ba33336 - 3eff28a158

Broke between 896ba3333666 - 3eff28a158ca
Member

Caused by 98bfa8d458

CC @mano-wii

Caused by 98bfa8d4589cae47d0b7ae9ff576a9acca91ab88 CC @mano-wii
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-06-07 16:56:59 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#108665
No description provided.